--- a/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
+++ b/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <div
-  class="transform transition delay-10 duration-300 ease-in-out scale-0"
+  class="transform transition delay-10 duration-300 ease-in-out scale-0 dark:bg-basic-500"
   (click)="onClick()"
   [ngClass]="{ 'scale-100': properties }"
 >
