--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -43,14 +43,14 @@
       class="w-full md:w-[70%] lg:w-[80%] mx-auto my-0 h-fit grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5"
     >
       <div
-        class="flex flex-col justify-center hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-basic-900 p-4 m-2 relative cursor-pointer"
+        class="flex flex-col justify-center hover:border-secondary-800 text-center border-2 border-dashed rounded-lg border-secondary-400 bg-basic-900 p-4 m-2 relative cursor-pointer bg-transparent"
         (click)="onCreate()"
       >
         <fa-icon
           [icon]="faPlus"
-          class="fa-2x text-secondary-100 group-hover:text-secondary-300"
+          class="fa-2x text-secondary-500 group-hover:text-secondary-700"
         ></fa-icon>
-        <h4 class="text-secondary-100 group-hover:text-secondary-300">
+        <h4 class="text-secondary-500 group-hover:text-secondary-700">
           Formular
         </h4>
       </div>
