--- a/frontend/src/app/properties/components/property-item/property-item.component.html
+++ b/frontend/src/app/properties/components/property-item/property-item.component.html
@@ -1,7 +1,7 @@
 <div
-  class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 h-[100%]"
+  class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 dark:border-basic-500 dark:text-basic-500 h-[100%]"
   [ngClass]="{
-    'text-basic-500 bg-secondary-500': selected,
+    'text-basic-500 bg-secondary-500 dark:bg-basic-500 dark:text-secondary-500': selected,
     'hover:text-basic-500 hover:bg-secondary-500': !editing,
     'cursor-pointer': allowEdition
   }"
@@ -16,6 +16,6 @@
   >
   <span *ngIf="!editing">{{ property?.name }}</span>
 
-  <fa-icon (click)="onSaveEdition($event)" [icon]="faSave" class="ml-3 text-secondary-500 hover:text-primary-500" *ngIf="edited"></fa-icon>
+  <fa-icon (click)="onSaveEdition($event)" [icon]="faSave" class="ml-3 text-secondary-500 dark:text-basic-500 hover:text-primary-500" *ngIf="edited"></fa-icon>
   <fa-icon (click)="onDeleteProperty($event)" [icon]="faTrash" class="ml-3 text-danger " *ngIf="editing" ></fa-icon>
 </div>
