--- a/frontend/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -6,11 +6,11 @@
         *ngFor="let nav of breadcrumbHistory"
       >
         <a
-          class="italic text-secondary-500"
+          class="italic"
           (click)="navigate(nav.navigateName)"
           [ngClass]="{
             'cursor-default text-secondary-200': !nav.navigateName,
-            'cursor-pointer hover:text-primary-500': nav.navigateName
+            'cursor-pointer text-secondary-500 dark:text-basic-500 dark:hover:text-primary-500 hover:text-primary-500': nav.navigateName
           }"
           >{{ nav.name }}</a
         >
