--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -114,7 +114,7 @@
         <h2>Configuración</h2>
         <div class="flex flex-col mt-2">
           <a
-            class="text-secondary-500 hover:text-primary-500"
+            class="text-secondary-500 dark:text-basic-500 hover:text-primary-500 dark:hover:text-primary-500"
             [routerLink]="['/reset-password']"
             routerLinkActive="router-link-active"
             >Cambiar contraseña</a
